fix(drawer): 🐛 remove gap; replace with margin

--- a/resources/mixins.less
+++ b/resources/mixins.less
@@ -181,7 +181,6 @@
 	align-items: center;
 	color: var( --color-base ) !important;
 	font-weight: var( --font-weight-medium );
-	gap: var( --space-sm );
 }
 
 .menu-item-link-hover() {
