--- a/resources/skins.citizen.styles/Drawer.less
+++ b/resources/skins.citizen.styles/Drawer.less
@@ -49,6 +49,7 @@
 
 		a {
 			.menu-item-link;
+			gap: var( --space-sm );
 			padding: 0.625rem var( --space-md ); // TODO: Make this a variable
 			border-radius: var( --border-radius--small );
 
