--- a/resources/skins.citizen.styles/Pagetools.less
+++ b/resources/skins.citizen.styles/Pagetools.less
@@ -59,6 +59,11 @@
 		a {
 			padding: 0.625rem var( --space-md );
 			.menu-item-link;
+			gap: unset;
+
+			.citizen-ui-icon {
+				margin-right: var( --space-sm );
+			}
 
 			&:hover {
 				.menu-item-link-hover;
