--- a/resources/skins.citizen.styles/Usermenu.less
+++ b/resources/skins.citizen.styles/Usermenu.less
@@ -24,6 +24,7 @@
 		li {
 			a {
 				.menu-item-link;
+				gap: var( --space-sm );
 				align-items: center;
 				// TODO: Need to revisit this spacing, maybe set a min-height instead?
 				padding: 0.625rem var( --space-md );
